Add Lecture of Fourier Transform

--- a/Notebooks/10_inversion_matricial_y_calculo_de_autovalores.ipynb
+++ b/Notebooks/10_inversion_matricial_y_calculo_de_autovalores.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -116,9 +116,9 @@
       " [ 0.75  1.5  -2.75]\n",
       " [-0.25 -0.5   1.25]]\n",
       "comprobar inversa:\n",
-      "[[1. 0. 0.]\n",
-      " [0. 1. 0.]\n",
-      " [0. 0. 1.]]\n"
+      "[[ 1.  0. -0.]\n",
+      " [ 0.  1. -0.]\n",
+      " [ 0.  0.  1.]]\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
     "print('inversa de A:')\n",
     "print(inversa_A)\n",
     "print('comprobar inversa:')\n",
-    "print(np.round(inversa_A @ A, 14))"
+    "print(np.round(A @ inversa_A, 14))"
    ]
   },
   {
@@ -162,12 +162,12 @@
     "\n",
     "Si $d$ el producto de los escalares por los que se multiplica al determinante, utilizando las reglas anteriores. Entonces el determinante de A es el cociente por d del producto de los elementos de la diagonal de B.\n",
     "\n",
-    "$$\\det(A) = \\frac{\\prod\\operatorname{diag}(B)}{d}$$\n"
+    "$$\\det(A) = d*\\prod\\operatorname{diag}(B)$$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "id": "-NwH9xpqpCXv"
    },
@@ -190,6 +190,7 @@
     "\n",
     "def determinante(A):\n",
     "  B,d = triangular_superior_y_d(A)\n",
+    "  print(B)\n",
     "  produc = 1\n",
     "  for i in range(B.shape[0]):\n",
     "    produc = produc * B[i,i] \n",
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -211,13 +212,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Determinante con nuestro método: 0.07285903583649063\n",
-      "Determinante con numpy         : 0.07285903583649059\n"
+      "[[ 0.95902098  0.04629309  0.54414925  0.85395004]\n",
+      " [ 0.         -0.82431748 -0.11363559 -0.25783652]\n",
+      " [-0.          0.          0.68794404  0.32640651]\n",
+      " [-0.          0.          0.          0.53016749]]\n",
+      "Determinante con nuestro método: -0.28832932750314544\n",
+      "Determinante con numpy         : -0.2883293275031453\n"
      ]
     }
    ],
    "source": [
-    "A = np.random.rand(20,20)\n",
+    "A = np.random.rand(4,4)\n",
     "\n",
     "print('Determinante con nuestro método:',determinante(A))\n",
     "print('Determinante con numpy         :',np.linalg.det(A))"
@@ -263,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "id": "Q4A21gU_7U0d"
    },
@@ -276,12 +281,12 @@
     "  return metodo_de_potencias(A, v, iteraciones-1)\n",
     "\n",
     "def valor_propio(A, v_prop):\n",
-    "  return (v_prop.T @ A @ v_prop) / (v_prop @ v_prop)\n"
+    "  return (v_prop.T @ A @ v_prop) / (v_prop @ v_prop)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -373,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "id": "tz2JCpTKjTd-"
    },
@@ -404,12 +409,13 @@
     "  for k in range(iteraciones):\n",
     "    Qk = calcula_Q(Ak)\n",
     "    Ak = Qk.T @ Ak @ Qk\n",
+    "  print(Ak)\n",
     "  return np.diag(Ak)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -422,6 +428,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ 5.23606798e+00  6.02642688e-06 -1.41421356e+00]\n",
+      " [ 4.92513354e-06 -2.00000000e+00 -3.11492795e-06]\n",
+      " [ 3.17884775e-12 -2.15236228e-06  7.63932022e-01]]\n",
       "valores propios con nuestro método:\n",
       "[ 5.23606798 -2.          0.76393202] \n",
       "\n",
